--- a/src/styles/basic/colors.sass
+++ b/src/styles/basic/colors.sass
@@ -3,8 +3,8 @@ $color-metal: #31363B
 $color-gray: #A0A4A6
 $color-silver: #DFE2E2
 $color-white: #F5F5F5
-$color-blue: #0A95FF
-$color-green: #15E029
-$color-red: #FF3341
-$color-orange: #FF801F
+$color-blue: #39A0ED
+$color-green: #06B178
+$color-red: #B9314F
+$color-orange: #F0803C
 $color-yellow: #FFE74C
