--- a/src/styles/themes/dark.sass
+++ b/src/styles/themes/dark.sass
@@ -1,4 +1,19 @@
+@use "sass:color" as c
 @use "../basic/colors"
 
 $color-bg: colors.$color-metal
 $color-text: colors.$color-silver
+
+$color-primary: colors.$color-blue
+$color-secondary: colors.$color-gray
+$color-accent: colors.$color-green
+$color-danger: colors.$color-red
+$color-warning: colors.$color-orange
+
+// $shadow-inner: 1px 1px 1px 2px rgba(0, 0, 0, 0.2) inset, -1px -1px 1px 2px rgba(255, 255, 255, 0.1) inset
+// $shadow-outer: 1px 1px 1px 2px rgba(0, 0, 0, 0.2), -1px -1px 1px 2px rgba(255, 255, 255, 0.1)
+// $shadow-text: 1px -1px 1px rgba(0, 0, 0, 0.3), -1px -1px 1px rgba(0, 0, 0, 0.3), 2px 0px 7px rgba(255, 255, 255, 0.3), 0 -2px 7px rgba(255, 255, 255, 0.3)
+
+$color-button-text: colors.$color-silver
+$color-input-border: colors.$color-gray
+$color-input-border-accent: colors.$color-silver
