--- a/src/styles/themes/light.sass
+++ b/src/styles/themes/light.sass
@@ -2,3 +2,17 @@
 
 $color-bg: colors.$color-white
 $color-text: colors.$color-metal
+$color-primary: colors.$color-blue
+$color-secondary: colors.$color-gray
+$color-accent: colors.$color-green
+$color-danger: colors.$color-red
+$color-warning: colors.$color-orange
+
+// $shadow-inner: 1px 1px 1px 2px rgba(0, 0, 0, 0.2) inset, -1px -1px 1px 2px rgba(255, 255, 255, 0.1) inset
+// $shadow-outer: 1px 1px 1px 2px rgba(0, 0, 0, 0.2), -1px -1px 1px 2px rgba(255, 255, 255, 0.1)
+// $shadow-text: 0px 0px 1px rgba(0, 0, 0, 0.2), -1px -1px 1px rgba(0, 0, 0, 0.1), 2px 0px 7px rgba(0, 0, 0, 0.1), 0 -2px 7px rgba(0, 0, 0, 0.1)
+
+$color-button-text: white
+$color-input-border: colors.$color-silver
+$color-input-border-accent: colors.$color-gray
+
