Fix inputs' border box

--- a/src/styles/common/input.sass
+++ b/src/styles/common/input.sass
@@ -24,6 +24,7 @@
     border-style: solid
     border-width: 1px
     border-color: var(--color-input-border)
+    box-sizing: border-box
     color: var(--color-text)
     font-size: vars.$font-size-16
     font-weight: 500
