--- a/src/styles/common/input.sass
+++ b/src/styles/common/input.sass
@@ -7,6 +7,7 @@
   padding-top: calc(vars.$font-size-12 / 2 + 0px)
 
   .placeholder
+    user-select: none
     position: absolute
     font-size: vars.$font-size-12
     top: calc(vars.$font-size-12 - 1em)
@@ -78,3 +79,54 @@
           font-style: none
           margin-left: -2em
           transform: translateX(-2em)
+
+@mixin checkbox-wrapper
+  display: inline-block
+  font-size: vars.$font-size-16
+  user-select: none
+
+  .switch
+    background-color: var(--color-bg)
+    border-radius: vars.$border-radius
+    border-style: solid
+    border-width: 1px
+    border-color: var(--color-input-border)
+    box-shadow: vars.$shadow-basic
+    width: 1.25em
+    height: 1.25em
+    display: inline-block
+    vertical-align: middle
+    margin-right: .5em
+    position: relative
+
+    &::after
+      content: ""
+      position: absolute
+      width: calc(100% - 8px)
+      height: calc(100% - 8px)
+      background-color: var(--color-blue)
+      border-radius: 2px
+      top: 4px
+      left: 4px
+      display: none
+
+  &:hover
+    .switch
+      border-color: var(--color-input-border-accent)
+
+  input
+    display: none
+
+    &:checked + .switch
+      &::after
+        display: block
+
+    &:disabled + .switch
+      pointer-events: none
+      border-color: var(--color-input-border)
+
+      &::after
+        background-color: var(--color-input-border)
+
+      & + .label
+        color: var(--color-input-border-accent)
