Add a style for the disabled input

--- a/src/styles/common/input.sass
+++ b/src/styles/common/input.sass
@@ -51,6 +51,9 @@
       & + .placeholder
         color: var(--color-red)
 
+    &:disabled
+      color: var(--color-input-border-accent)
+
     &::placeholder
       color: var(--color-input-border)
 
