--- a/src/components/ui/Button/styles.sass
+++ b/src/components/ui/Button/styles.sass
@@ -44,3 +44,4 @@
   &[disabled]
     // text-shadow: 1px -1px 1px rgba(0, 0, 0, 0.2), -1px -1px 1px rgba(0, 0, 0, 0.2)
     pointer-events: none
+    opacity: .5
