--- a/src/components/layout/Grid/styles.sass
+++ b/src/components/layout/Grid/styles.sass
@@ -16,10 +16,12 @@
 .col
   padding-left: vars.$grid-gutter
   padding-right: vars.$grid-gutter
+  flex-basis: 100%
 
   @for $i from 1 through 12
     &.col-m-#{$i}
       width: #{math.div(100, 12) * $i +'%'}
+      flex-basis: #{math.div(100, 12) * $i +'%'}
 
   &.col-m-0
     display: none
@@ -28,6 +30,7 @@
     @for $i from 1 through 12
       &.col-d-#{$i}
         width: #{math.div(100, 12) * $i +'%'}
+        flex-basis: #{math.div(100, 12) * $i +'%'}
 
     &.col-d-0
       display: none
