--- a/src/components/layout/Grid/styles.sass
+++ b/src/components/layout/Grid/styles.sass
@@ -1,5 +1,6 @@
 @use "sass:math"
 @use "../../../styles/basic/variables" as vars
+@use "../../../styles/basic/breakpoints"
 
 .container
   padding-left: vars.$grid-gutter
@@ -26,7 +27,7 @@
   &.col-m-0
     display: none
 
-  @media screen and (min-width: vars.$layout-breakpoint)
+  @include breakpoints.breakpoint-desktop
     @for $i from 1 through 12
       &.col-d-#{$i}
         width: #{math.div(100, 12) * $i +'%'}
