--- a/src/components/layout/Layout/styles.sass
+++ b/src/components/layout/Layout/styles.sass
@@ -1,3 +1,8 @@
+@use "../../../styles/basic/breakpoints"
+
 .wrapper
-  max-width: 1366px
   margin: auto
+  height: 100vh
+  display: flex
+  justify-content: center
+  flex-direction: column
