--- a/src/components/views/CookBook/styles.sass
+++ b/src/components/views/CookBook/styles.sass
@@ -1,7 +1,8 @@
 .product
-  border: 1px solid green
+  border: 1px solid gray
   margin: 6px 0
   padding: 4px
+  border-radius: 4px
 
   .title
     display: flex
