Improve basic styles

--- a/src/components/layout/Grid/styles.sass
+++ b/src/components/layout/Grid/styles.sass
@@ -20,19 +20,36 @@
   flex-basis: 100%
 
   @for $i from 1 through 12
-    &.col-m-#{$i}
+    &.col-mobile-#{$i}
       width: #{math.div(100, 12) * $i +'%'}
       flex-basis: #{math.div(100, 12) * $i +'%'}
 
-  &.col-m-0
+  &.col-mobile-0
     display: none
 
-  @include breakpoints.breakpoint-desktop
+  @include breakpoints.breakpoint-tablet
     @for $i from 1 through 12
-      &.col-d-#{$i}
+      &.col-tablet-#{$i}
         width: #{math.div(100, 12) * $i +'%'}
         flex-basis: #{math.div(100, 12) * $i +'%'}
 
-    &.col-d-0
+    &.col-tablet-0
       display: none
 
+  @include breakpoints.breakpoint-desktop
+    @for $i from 1 through 12
+      &.col-desktop-#{$i}
+        width: #{math.div(100, 12) * $i +'%'}
+        flex-basis: #{math.div(100, 12) * $i +'%'}
+
+    &.col-desktop-0
+      display: none
+
+  @include breakpoints.breakpoint-hd
+    @for $i from 1 through 12
+      &.col-hd-#{$i}
+        width: #{math.div(100, 12) * $i +'%'}
+        flex-basis: #{math.div(100, 12) * $i +'%'}
+
+    &.col-hd-0
+      display: none
