--- a/src/styles/basic/breakpoints.sass
+++ b/src/styles/basic/breakpoints.sass
@@ -3,11 +3,11 @@
     @content
 
 @mixin breakpoint-tablet
-  @media (min-width: 481px) and (max-width: 1024px)
+  @media (min-width: 481px)
     @content
 
 @mixin breakpoint-desktop
-  @media (min-width: 1025px) and (max-width: 1200px)
+  @media (min-width: 1025px)
     @content
 
 @mixin breakpoint-hd
