--- a/src/styles/basic/global.sass
+++ b/src/styles/basic/global.sass
@@ -17,8 +17,10 @@
 
 html
   background-color: var(--color-bg)
+  height: 100vh
 
 body
+  height: 100%
   background-color: var(--color-bg)
   color: var(--color-text)
   font-family: Source Sans Pro, Ubuntu, 'Open Sans', sans-serif
