Add some global styles

--- a/src/styles/basic/global.sass
+++ b/src/styles/basic/global.sass
@@ -4,6 +4,7 @@
 @use "../themes/dark" as theme-dark
 // @use "./fonts"
 @use "./utils"
+@use "../common/headers" as *
 
 :root
   @media (prefers-color-scheme: light)
