--- a/src/styles/common/input.sass
+++ b/src/styles/common/input.sass
@@ -14,7 +14,7 @@
     position: absolute
     font-size: vars.$font-size-12
     top: calc(vars.$font-size-12 - 1em)
-    background-color: var(--color-bg)
+    text-shadow: 0 2px 2px var(--color-bg)
     left: 1.25em
     color: var(--color-input-border-accent)
     transition: .2s
@@ -23,11 +23,11 @@
 
   input,
   select
-    background-color: var(--color-bg)
+    background-color: rgba(140, 140, 140, 0.1)
     border-radius: vars.$border-radius
-    border-style: solid
-    border-width: 1px
-    border-color: var(--color-input-border)
+    // border-style: solid
+    border-width: 0px
+    // border-color: var(--color-input-border)
     box-sizing: border-box
     color: var(--color-text)
     font-size: vars.$font-size-16
@@ -50,7 +50,7 @@
 
 
     &::placeholder
-      color: var(--color-input-border)
+      color: var(--color-input-border-accent)
 
     &:placeholder-shown + .placeholder
         opacity: 0
