--- a/src/components/ui/CardRadioInput/styles.sass
+++ b/src/components/ui/CardRadioInput/styles.sass
@@ -5,7 +5,7 @@
   @include input.checkbox-wrapper
   position: relative
   padding: 20px
-  border: 1px solid var(--color-input-border)
+  background-color: rgba(140, 140, 140, 0.1)
   border-radius: vars.$border-radius
   text-align: center
   display: inline-flex
@@ -14,8 +14,8 @@
   flex-direction: column
 
   .label
-    color: var(--color-gray)
-    font-size: vars.$font-size-12
+    color: var(--color-text)
+    font-size: vars.$font-size-14
 
   .icon
     font-size: vars.$font-size-36
@@ -29,8 +29,8 @@
     height: 1em
     transition: .3s
     position: absolute
-    top: 4px
-    left: 4px
+    top: 8px
+    left: 8px
 
     &::after
       display: block
