--- a/src/components/layout/Layout/styles.sass
+++ b/src/components/layout/Layout/styles.sass
@@ -2,7 +2,7 @@
 
 .wrapper
   margin: auto
-  height: 100vh
+  height: 100%
+  max-width: 1200px
   display: flex
-  justify-content: center
   flex-direction: column
