Change global gutter

--- a/src/components/layout/Grid/styles.sass
+++ b/src/components/layout/Grid/styles.sass
@@ -3,8 +3,8 @@
 @use "../../../styles/basic/breakpoints"
 
 .container
-  padding-left: vars.$grid-gutter
-  padding-right: vars.$grid-gutter
+  padding-left: (vars.$grid-gutter * 2)
+  padding-right: (vars.$grid-gutter * 2)
 
 .row
   display: flex
