--- a/src/components/ui/ButtonPanel/styles.sass
+++ b/src/components/ui/ButtonPanel/styles.sass
@@ -6,7 +6,7 @@
   display: flex
   align-items: center
   justify-content: flex-end
-  padding: vars.$grid-gutter
+  padding: (vars.$grid-gutter * 2)
 
   & > *:first-child:not(:last-child)
     margin-right: auto
