--- a/src/styles/basic/global.sass
+++ b/src/styles/basic/global.sass
@@ -18,7 +18,10 @@
 
 html
   background-color: var(--color-bg)
-  height: 100vh
+  position: fixed
+  width: 100%
+  height: 100%
+  overflow: hidden
 
 body
   height: 100%
