--- a/src/components/ui/Panel/styles.sass
+++ b/src/components/ui/Panel/styles.sass
@@ -26,6 +26,10 @@
     bottom: 0
     left: 0
     right: 0
+    user-select: none
+
+    &.captured
+      transition: none
 
     &.open
       transform: translateY(0%)
@@ -36,8 +40,8 @@
   overflow: auto
   padding: 20px
 
-@keyframes appear
-  0%
-    opacity: 0
-  100%
-    opacity: 1
+.top
+  background-color: var(--color-blue)
+  text-align: center
+  font-weight: 700
+  height: 40px
