--- a/src/styles/basic/global.sass
+++ b/src/styles/basic/global.sass
@@ -41,3 +41,6 @@ body
 
   [data-theme="dark"]
     @include utils.generate-vars(module-variables(theme-dark))
+
+small
+  font-size: (vars.$font-size-14 * 0.825)
