--- a/src/styles/basic/variables.sass
+++ b/src/styles/basic/variables.sass
@@ -4,9 +4,11 @@ $layout-breakpoint: 1024px
 $border-radius: 14px
 
 $font-size-8: 8px
+$font-size-10: 10px
 $font-size-12: 12px
 $font-size-14: 14px
 $font-size-16: 16px
+$font-size-18: 18px
 $font-size-20: 20px
 $font-size-24: 24px
 $font-size-30: 30px
