Change font sizes of UserBrief

--- a/src/components/informers/UserBrief/styles.sass
+++ b/src/components/informers/UserBrief/styles.sass
@@ -5,13 +5,13 @@
   align-items: baseline
 
 .name
-  font-size: vars.$font-size-30
+  font-size: vars.$font-size-24
   font-weight: 900
 
 .sex
-  font-size: vars.$font-size-30
+  font-size: vars.$font-size-24
   margin-right: .5em
 
 .age
   font-size: vars.$font-size-14
-  color: var(--color-input-border-accent)
+  opacity: .7
