--- a/src/styles/common/input.sass
+++ b/src/styles/common/input.sass
@@ -70,7 +70,7 @@
   .icon
     position: absolute
     font-size: 1.25em
-    top: 1.5em
+    top: calc(50% - .5em )
     left: 1.25em
 
     & + input,
