Change diagram scale colors

--- a/src/components/ui/LineDiagram/styles.sass
+++ b/src/components/ui/LineDiagram/styles.sass
@@ -4,7 +4,7 @@
   width: 100%
 
 .scale
-  background-color: var(--color-silver)
+  background-color: var(--color-text)
   opacity: .1
 
 .scale, .value
