--- a/src/components/informers/CurrentDate/styles.sass
+++ b/src/components/informers/CurrentDate/styles.sass
@@ -14,6 +14,7 @@
   input
     font-weight: 900
     background-color: transparent
+    box-shadow: none
     font-size: vars.$font-size-20
 
 .arrow
