--- a/src/styles/basic/variables.sass
+++ b/src/styles/basic/variables.sass
@@ -21,5 +21,9 @@ $ratio-opacity: .5
 $base-percents: 20%
 
 $shadow-basic: 0 2px 2px -1px rgba(0, 0, 0, 0.05)
+$shadow-dialog: 0 1.5px 4px 2px rgba(0, 0, 0, 0.1)
 
 $input-height: 3.75em
+
+$dialog-window-width: 800px
+$dialog-window-height: 600px
