Change global styles

--- a/src/styles/basic/global.sass
+++ b/src/styles/basic/global.sass
@@ -44,3 +44,12 @@ body
 
 small
   font-size: (vars.$font-size-14 * 0.825)
+
+
+:global(.svg-icon)
+  path
+    fill: none
+    stroke: currentColor
+    stroke-width: 3px
+    stroke-linecap: round
+    stroke-linejoin: round
