--- a/src/components/ui/ButtonPanel/styles.sass
+++ b/src/components/ui/ButtonPanel/styles.sass
@@ -6,6 +6,7 @@
   display: flex
   align-items: center
   justify-content: flex-end
+  gap: (vars.$grid-gutter * 2)
   padding: (vars.$grid-gutter * 2)
 
   & > *:first-child:not(:last-child)
