--- a/src/styles/common/input.sass
+++ b/src/styles/common/input.sass
@@ -69,8 +69,9 @@
 
   .icon
     position: absolute
+    line-height: 1em
     font-size: 1.25em
-    top: calc(50% - .5em )
+    top: calc(50% - .325em )
     left: 1.25em
 
     & + input,
