Change global styles

--- a/src/styles/basic/global.sass
+++ b/src/styles/basic/global.sass
@@ -30,6 +30,7 @@ body
   font-family: Source Sans Pro, Ubuntu, 'Open Sans', sans-serif
   font-size: vars.$font-size-14
   margin: 0
+  user-select: none
   overflow-x: hidden
   overscroll-behavior: none
   text-rendering: optimizeLegibility
