Set styles for icons in Button

--- a/src/components/ui/Button/styles.sass
+++ b/src/components/ui/Button/styles.sass
@@ -42,3 +42,8 @@
   &[disabled]
     pointer-events: none
     opacity: .5
+
+  & > :global(.svg-icon)
+    height: 1.125em
+    width: 1.125em
+    vertical-align: middle
