Remove content paddings in Dialog

--- a/src/components/views/ProductView/styles.sass
+++ b/src/components/views/ProductView/styles.sass
@@ -1,5 +1,10 @@
+@use "../../../styles/basic/variables" as vars
+
 .wrapper
   animation: slide .3s 1
+
+.fields
+  padding: 0 (vars.$grid-gutter * 2)
 
 @keyframes slide
   0%
