--- a/src/styles/common/input.sass
+++ b/src/styles/common/input.sass
@@ -15,7 +15,7 @@
 
 
 @mixin input-field
-  background-color: rgba(150, 150, 150, 0.07)
+  background-color: var(--color-backdrop)
   border-radius: vars.$border-radius
   // border-style: solid
   border-width: 0px
