--- a/src/components/ui/Button/styles.sass
+++ b/src/components/ui/Button/styles.sass
@@ -1,4 +1,5 @@
 @use "../../../styles/basic/variables" as vars
+@use "../../../styles/basic/breakpoints"
 
 .wrapper
   background-color: var(--color-bg)
@@ -38,6 +39,10 @@
   &.block
     display: block
     width: 100%
+
+  &.half
+    @include breakpoints.breakpoint-tablet
+      max-width: 50%
 
   &[disabled]
     pointer-events: none
