Change Dashboard styles

--- a/src/components/informers/CurrentDate/styles.sass
+++ b/src/components/informers/CurrentDate/styles.sass
@@ -16,6 +16,7 @@
     background-color: transparent
     box-shadow: none
     font-size: vars.$font-size-20
+    height: 3.5em
 
 .arrow
   flex-shrink: 1
