Change build paths

--- a/src/styles/basic/colors.sass
+++ b/src/styles/basic/colors.sass
@@ -1,8 +1,8 @@
-$color-black: #1E1E1F
+$color-black: #000000
 $color-metal: #31363B
 $color-gray: #A0A4A6
 $color-silver: #DFE2E2
-$color-white: #F9F9F9
+$color-white: #FEFEFE
 $color-blue: #39A0ED
 $color-green: #06B178
 $color-red: #B9314F
