--- a/src/styles/themes/dark.sass
+++ b/src/styles/themes/dark.sass
@@ -1,7 +1,7 @@
 @use "sass:color" as c
 @use "../basic/colors"
 
-$color-bg: colors.$color-metal
+$color-bg: colors.$color-black
 $color-text: colors.$color-silver
 
 $color-primary: colors.$color-blue
