Change the app's colors

--- a/src/components/lists/ListItem/styles.sass
+++ b/src/components/lists/ListItem/styles.sass
@@ -4,7 +4,7 @@
   display: flex
   border-radius: vars.$border-radius
   font-size: vars.$font-size-16
-  background-color: rgba(150, 150, 150, 0.07)
+  background-color: var(--color-backdrop)
   box-shadow: vars.$shadow-basic
   margin-bottom: 16px
   padding: 1.25em
