--- a/src/components/views/MealView/styles.sass
+++ b/src/components/views/MealView/styles.sass
@@ -1,12 +1,4 @@
-@use "../../../styles/basic/breakpoints"
+@use "../../../styles/common/view"
 
 .wrapper
-  animation: slide .3s 1
-
-@keyframes slide
-  0%
-    opacity: 0
-    transform: translateY(200px)
-  100%
-    opacity: 1
-    transform: translateY(0px)
+  @include view.dialog-wrapper
