--- a/src/components/views/ProductView/styles.sass
+++ b/src/components/views/ProductView/styles.sass
@@ -1,15 +1,8 @@
 @use "../../../styles/basic/variables" as vars
+@use "../../../styles/common/view"
 
 .wrapper
-  animation: slide .3s 1
+  @include view.dialog-wrapper
 
 .fields
   padding: 0 (vars.$grid-gutter * 2)
-
-@keyframes slide
-  0%
-    opacity: 0
-    transform: translateY(200px)
-  100%
-    opacity: 1
-    transform: translateY(0px)
