--- a/src/components/ui/Dialog/styles.sass
+++ b/src/components/ui/Dialog/styles.sass
@@ -34,6 +34,9 @@
   height: 100%
   width: 100%
 
+  &:not(.captured)
+    transition: transform .2s ease-in
+
   @include breakpoints.breakpoint-desktop
     border-radius: vars.$border-radius
     box-shadow: vars.$shadow-dialog
