--- a/src/components/views/Dashboard/styles.sass
+++ b/src/components/views/Dashboard/styles.sass
@@ -14,3 +14,8 @@
 
 .options-button
   min-width: 5em
+
+.goals
+  &:active
+    transform: scale(.95)
+    transition: transform .3s cubic-bezier(0.34, 1.56, 0.64, 1)
