Add a button to manage recipes and products on mobile devices

--- a/src/components/views/Dashboard/styles.sass
+++ b/src/components/views/Dashboard/styles.sass
@@ -14,6 +14,19 @@
 
 .options-button
   min-width: 5em
+  position: relative
+
+  select
+    opacity: 0
+    appearance: none
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    padding: 0
+    width: 100%
+    border-radius: vars.$border-radius
 
 .goals
   &:active
