Add input type `time`

--- a/src/components/ui/TextInput/styles.sass
+++ b/src/components/ui/TextInput/styles.sass
@@ -18,7 +18,8 @@
         -moz-appearance: none
         appearance: none
 
-    &[type="search"]
+    &[type="search"],
+    &[type="time"]
       -webkit-appearance: none
       -moz-appearance: none
       appearance: none
