Fix archieved items

--- a/src/components/lists/RecipeList/styles.sass
+++ b/src/components/lists/RecipeList/styles.sass
@@ -2,6 +2,9 @@
 @use "../../../styles/basic/variables" as vars
 @use "../../../styles/basic/breakpoints"
 
+.archieved
+  @include list.item-archieved
+
 .header
   @include list.item-header
 
